--- a/assets/css/actores/detalles.scss
+++ b/assets/css/actores/detalles.scss
@@ -78,7 +78,7 @@
 		font-weight: bold;
 	}
 
-	& .icono {
+	& .icono.main-icon {
 		font-size: 24px;
 		float: left;
 		display: block;
@@ -152,6 +152,7 @@
 		color: #fff;
 	}
 }
+
 
 .detalles-actor footer {
 	padding: 0 20px;
