--- a/assets/css/review/general.scss
+++ b/assets/css/review/general.scss
@@ -22,6 +22,14 @@
 	& .icono {
 		font-size: 3em;
 		display: block;
+		width: 100%;
+		height: 1em;
+		line-height: 1em;
+		margin: 0;
+	}
+
+	&[selected] {
+		color: #000;
 	}
 }
 
