--- a/views/layout.erb
+++ b/views/layout.erb
@@ -43,7 +43,7 @@
 		<link rel="apple-touch-startup-image" sizes="768x1004" href="/img/ios/startup-ipad-portrait.png" media="screen and (min-device-width : 481px) and (max-device-width : 1024px) and (orientation : portrait)">
 		<link rel="apple-touch-startup-image" sizes="1536x2008" href="/img/ios/startup-ipad-portrait@2x.png" media="screen and (-webkit-min-device-pixel-ratio : 2) and (min-device-width : 481px) and (max-device-width : 2048px) and (orientation : portrait)">
 
-		<link href='http://fonts.googleapis.com/css?family=Raleway:400,900,700,100' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Raleway:400,900,700,100|Fira+Sans:300,700' rel='stylesheet' type='text/css'>
 		
 		<%
 			path = @request.path_info.split('/')
