descagando búsqueda y history

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -96,18 +96,11 @@
 		</div>
 
 		<script type="text/javascript">
-
 		  var _gaq = _gaq || [];
 		  _gaq.push(['_setAccount', 'UA-37922009-1']);
 		  _gaq.push(['_trackPageview']);
-
-		  (function() {
-		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		  })();
-
 		</script>
+		<script src="http://www.google-analytics.com/ga.js" async="true"></script>
 		<script src="/js/<%= _viewName %>.js"></script>
 	</body>
 </html>
