aclarando pedo de contribuciones

--- a/views/acerca.erb
+++ b/views/acerca.erb
@@ -36,7 +36,9 @@
 
 		<h2>¿Cómo contribuyo a este pedo?</h2>
 
-		<p>Si deseas ayudar a completar la lista de representantes locales, la manera más rápida de empezar es por el <a href="https://github.com/unRob/representantes.pati.to" title="Repo de github">repo en github</a>.</p>
+		<p>Si deseas ayudar a completar la lista de representantes locales, <strike>la manera más rápida de empezar es por el <a href="https://github.com/unRob/representantes.pati.to" title="Repo de github">repo en github</a></strike>.</p>
+
+		<p>Debido a la cantidad de interesados en el proyecto que quieren usar los datos para "estudios de mercado" ó "cuartos de guerra", decidí hacer el repo privado, pero mándame un <a href="http://twitter.com/unrob">tuit</a> y te doy acceso!</p>
 
 		<hr/>
 	</section>
